--- a/apps/web/.env.example
+++ b/apps/web/.env.example
@@ -1,2 +1,2 @@
-VITE_CONVEX_URL=
-VITE_CONVEX_SITE_URL=
+VITE_CONVEX_URL=https://fast-blackbird-353.convex.cloud
+VITE_CONVEX_SITE_URL=https://fast-blackbird-353.convex.site
