--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -12,13 +12,21 @@
   },
   "dependencies": {
     "@base-ui/react": "^1.0.0",
+    "@convex-dev/better-auth": "catalog:",
+    "@fontsource-variable/inter": "^5.2.8",
     "@hookform/resolvers": "^5.1.1",
+    "@hugeicons/core-free-icons": "^3.1.1",
+    "@hugeicons/react": "^1.1.4",
+    "@ino-trips/backend": "workspace:*",
+    "@ino-trips/env": "workspace:*",
     "@tailwindcss/vite": "^4.0.15",
     "@tanstack/react-form": "^1.12.3",
     "@tanstack/react-router": "^1.141.1",
+    "better-auth": "catalog:",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "lucide-react": "^0.473.0",
+    "convex": "catalog:",
+    "dotenv": "catalog:",
     "next-themes": "^0.4.6",
     "react": "19.2.3",
     "react-dom": "19.2.3",
@@ -26,13 +34,7 @@
     "sonner": "^2.0.5",
     "tailwind-merge": "^3.3.1",
     "tw-animate-css": "^1.2.5",
-    "convex": "catalog:",
-    "better-auth": "catalog:",
-    "@convex-dev/better-auth": "catalog:",
-    "dotenv": "catalog:",
-    "zod": "catalog:",
-    "@ino-trips/env": "workspace:*",
-    "@ino-trips/backend": "workspace:*"
+    "zod": "catalog:"
   },
   "devDependencies": {
     "@tanstack/react-router-devtools": "^1.141.1",
