--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -15,8 +15,6 @@
     "@convex-dev/better-auth": "catalog:",
     "@fontsource-variable/inter": "^5.2.8",
     "@hookform/resolvers": "^5.1.1",
-    "@hugeicons/core-free-icons": "^3.1.1",
-    "@hugeicons/react": "^1.1.4",
     "@ino-trips/backend": "workspace:*",
     "@ino-trips/env": "workspace:*",
     "@tailwindcss/vite": "^4.0.15",
@@ -27,6 +25,7 @@
     "clsx": "^2.1.1",
     "convex": "catalog:",
     "dotenv": "catalog:",
+    "lucide-react": "^0.562.0",
     "next-themes": "^0.4.6",
     "react": "19.2.3",
     "react-dom": "19.2.3",
