--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -9,10 +9,11 @@
     "dev:setup": "convex dev --configure --until-success"
   },
   "dependencies": {
-    "convex": "catalog:",
-    "better-auth": "catalog:",
     "@convex-dev/better-auth": "catalog:",
+    "better-auth": "catalog:",
+    "convex": "catalog:",
     "dotenv": "catalog:",
+    "resend": "^6.6.0",
     "zod": "catalog:"
   },
   "devDependencies": {
